Add necessary resources to the README.md file